--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -37,6 +34,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: ${{ matrix.platform }}
+        platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.tags.outputs.TAGS }}
